--- a/Part 2/index.html
+++ b/Part 2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/estils.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <header>
     <h1>Restaurant</h1>
@@ -19,7 +20,7 @@
 <body>
 <article class="article1">
     <h1>Article 1</h1>
-    <!--img src="https://lesbarraquesdigitals.files.wordpress.com/2016/10/flam_coco.jpg" alt=""-->
+    <img src="https://lesbarraquesdigitals.files.wordpress.com/2016/10/flam_coco.jpg" alt="">
 </article>
 
 <article class="article2">
